# thread-lib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  build.Dockerfile  graphs.py
include/: thread.h
test/: CMakeLists.txt  main.c  test-utils.h  thread-utils.c  thread-utils.h
test/battery/: 01-main.c  02-switch.c  03-equity.c  11-join.c  12-join-main.c  21-create-many.c  22-create-many-recursive.c  23-create-many-once.c  31-switch-many.c  32-switch-many-join.c  33-switch-many-cascade.c  51-fibonacci.c  61-mutex.c  62-mutex.c  71-preemption.c  81-deadlock.c  CMakeLists.txt  signal-test.c  signal_test.c
thread/: CMakeLists.txt  debug.h  mutex.c  thread.c
